# smartass

./: Cargo.toml
smartass-cli/: Cargo.toml
smartass-cli/src/: main.rs
