[package]
name = "smartass-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive", "env"] }
dotenv = "0.15.0"
llm = { version = "1.3.2", default-features = false, features = ["anthropic", "azure_openai", "openai", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "tracing", "macros"] }
