[package]
name = "smartass-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive", "env"] }
dotenv = "0.15.0"
ignore = "0.4.23"
llm = { version = "1.3.2", default-features = false, features = ["anthropic", "azure_openai", "openai", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "tracing", "macros"] }
